--- a/ChangeLog
+++ b/ChangeLog
@@ -174,6 +174,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawka ikonek w menu statusu (michal)
 * linki mozna bez obawy przekazywac w natywnym kodowaniu do przegladarki, nie
   trzeba ich konwertowac (michal)
+* [0000594] wyswietlanie daty jako odstepu czasu w oknie chatu (michal)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
