możliwość ustawiania obrazka w tle listy kontaktu jako Tiled/Centered/Stretched
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4292 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -175,6 +175,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * linki mozna bez obawy przekazywac w natywnym kodowaniu do przegladarki, nie
   trzeba ich konwertowac (michal)
 * [0000594] wy¶wietlanie daty jako odstêpu czasu w oknie chatu (michal)
+* mo¿liwo¶æ ustawiania obrazka w tle listy kontaktu jako Tiled/Centered/Stretched (Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
