--- a/ChangeLog
+++ b/ChangeLog
@@ -176,6 +176,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   trzeba ich konwertowac (michal)
 * [0000594] wy¶wietlanie daty jako odstêpu czasu w oknie chatu (michal)
 * mo¿liwo¶æ ustawiania obrazka w tle listy kontaktu jako Tiled/Centered/Stretched (Vogel)
+* chat: format wiadomo¶ci parsowany przez KaduParser (Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
