--- a/ChangeLog
+++ b/ChangeLog
@@ -179,6 +179,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * chat: format wiadomo¶ci parsowany przez KaduParser (Vogel)
 * chat: spore przeróbki formatowania wiadomosci (Vogel)
 * nowe okno konfiguracji: mo¿liwo¶æ korzystania z nich przez modu³y (Vogel)
+* chat: trochê porz±dków - podzia³ Chat na ChatWindow i ChatWidget (Juzef/Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
