--- a/ChangeLog
+++ b/ChangeLog
@@ -186,6 +186,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * od¶wie¿anie toolbarów przy zmianie zestawu ikon (neeo)
 * nowa akcja dla okna chat oraz pozycja w menu g³ównym umo¿liwiaj±ca
   otwarcie okna Chat z kontaktem z listy lub UINem (White Eagle/neeo)
+* uporz±dkowanie nazw ikon w domy¶lnym zestawie (patpi/neeo)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
