autouzupelnianie w "open chat with"
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4412 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -185,7 +185,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * history: renderowanie historii jak w oknie rozmowy (Vogel)
 * od¶wie¿anie toolbarów przy zmianie zestawu ikon (neeo)
 * nowa akcja dla okna chat oraz pozycja w menu g³ównym umo¿liwiaj±ca
-  otwarcie okna Chat z kontaktem z listy lub UINem (White Eagle/neeo)
+  otwarcie okna Chat z kontaktem z listy lub UINem (White Eagle,neeo)
 * uporz±dkowanie nazw ikon w domy¶lnym zestawie (patpi/neeo)
 
 +++ wersja 0.5.0 (01.01.2007)
