--- a/ChangeLog
+++ b/ChangeLog
@@ -187,6 +187,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * nowa akcja dla okna chat oraz pozycja w menu g³ównym umo¿liwiaj±ca
   otwarcie okna Chat z kontaktem z listy lub UINem (White Eagle,neeo)
 * uporz±dkowanie nazw ikon w domy¶lnym zestawie (patpi/neeo)
+* powiadomienie o nowej wiadomo¶ci w oknie przez wysuniêcie go na wierzch (neeo)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
