--- a/THANKS
+++ b/THANKS
@@ -15,5 +15,6 @@ Tomasz "Dorregaray" Rostañski
 Marek "Kubi¶" Kubicki
 £ukasz "sarven" Florczak
 Kamil "Arvenil" Dziedzic
+Piotr "White Eagle" Galiszewski
 Manuel Wiblishauser and Jens Zettelmeyer - kadu_de
 i inni...
