--- a/varia/themes/icons/default/README
+++ b/varia/themes/icons/default/README
@@ -2,7 +2,7 @@ This is icon theme for Kadu instant messanger (http://kadu.net).
 
 If you have any questions ask on http://www.kadu.net/forum/
 
-- Icon module_tabs-close.png from Mozilla Firefox is licensed under:
+- Icon module_tabs-close.png and module_tabs-remove.png from Mozilla Firefox is licensed under:
     * Mozilla Public License, version 1.1 or later (http://www.mozilla.org/MPL/MPL-1.1.html)
     * GNU General Public License, version 2.0 or later (http://www.gnu.org/licenses/gpl-2.0.html)
     * GNU Lesser General Public License, version 2.1 or later (http://www.gnu.org/licenses/lgpl-2.1.html)
