--- a/ChangeLog
+++ b/ChangeLog
@@ -174,6 +174,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * powiadomienie o nowej wiadomo¶ci w oknie przez wysuniêcie go na wierzch (neeo)
 * klikniêcie na odpowiednio sformatowany numer gg w oknie rozmowy,
   powoduje otwarcie okna Chat z tym numerem (neeo)
+* mo¿liwo¶æ u¿ywania zmiennych w autostatusie (Dorregaray,White Eagle,neeo)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
