podziekowania dla patpiego
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4514 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/THANKS
+++ b/THANKS
@@ -16,5 +16,6 @@ Marek "Kubi¶" Kubicki
 £ukasz "sarven" Florczak
 Kamil "Arvenil" Dziedzic
 Piotr "White Eagle" Galiszewski
+Piotr "patpi" Pe³zowski
 Manuel Wiblishauser and Jens Zettelmeyer - kadu_de
 i inni...
