--- a/ChangeLog
+++ b/ChangeLog
@@ -157,7 +157,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * ujednolicone Protocol::sendMessage (Juzef/Vogel)
 * userbox: szeroko¶æ kolumn -> liczba kolumn (Vogel)
 * poprawka ikonek w menu statusu (michal)
-* linki mozna bez obawy przekazywac w natywnym kodowaniu do przegladarki, nie trzeba ich konwertowac (michal)
+* linki mo¿na bez obawy przekazywaæ w natywnym kodowaniu do przegl±darki,
+  nie trzeba ich konwertowaæ (michal)
 * [0000594] wy¶wietlanie daty jako odstêpu czasu w oknie chatu (michal)
 * mo¿liwo¶æ ustawiania obrazka w tle listy kontaktu jako Tiled/Centered/Stretched (Vogel)
 * chat: format wiadomo¶ci parsowany przez KaduParser (Vogel)
@@ -175,6 +176,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * klikniêcie na odpowiednio sformatowany numer gg w oknie rozmowy,
   powoduje otwarcie okna Chat z tym numerem (neeo)
 * mo¿liwo¶æ u¿ywania zmiennych w autostatusie (Dorregaray,White Eagle,neeo)
+* mo¿liwo¶æ opuszczenia konferencji w dowolnym momencie (Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
