--- a/ChangeLog
+++ b/ChangeLog
@@ -177,6 +177,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   powoduje otwarcie okna Chat z tym numerem (neeo)
 * mo¿liwo¶æ u¿ywania zmiennych w autostatusie (Dorregaray,White Eagle,neeo)
 * mo¿liwo¶æ opuszczenia konferencji w dowolnym momencie (Vogel)
+* Dcc w wersji 7 - wysy³anie plików (Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
