Dcc w wersji 7 - odbieranie plików
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4580 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -178,6 +178,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * mo¿liwo¶æ u¿ywania zmiennych w autostatusie (Dorregaray,White Eagle,neeo)
 * mo¿liwo¶æ opuszczenia konferencji w dowolnym momencie (Vogel)
 * Dcc w wersji 7 - wysy³anie plików (Vogel)
+* Dcc w wersji 7 - odbieranie plików (Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
