--- a/ChangeLog
+++ b/ChangeLog
@@ -179,6 +179,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * mo¿liwo¶æ opuszczenia konferencji w dowolnym momencie (Vogel)
 * Dcc w wersji 7 - wysy³anie plików (Vogel)
 * Dcc w wersji 7 - odbieranie plików (Vogel)
+* mo¿liwo¶æ dodawania ikon w zak³adkach grup (FuKu,White Eagle/neeo)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
