--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 
- Autorzy Kadu - ludzie aktywnie i stale wpieraj±cy projekt
+ Autorzy Kadu - ludzie aktywnie i stale wspieraj±cy projekt
 ===========================================================
 
 Tomasz Chiliñski <chilek (at) chilan (dot) com>
