--- a/varia/themes/icons/default/README
+++ b/varia/themes/icons/default/README
@@ -9,9 +9,6 @@ This work is licensed under a Creative Commons Attribution 2.5 License. (http://
 
 - Authors of modified icons:
 
-Łukasz Florczak (sarven) lucas at sarven dot pl
-	module_xmms.png
-
 Michał Bartecki (Mkbart) mkbart at gmail dot com
 	configure_big.png
 	contact-new_big.png
@@ -68,7 +65,7 @@ Jacek Nazim (zimaq) zimaq at zimaq dot pl
 	kadu-blocking.png
 	kadu-showdescriptionusers.png
 
-help-about-kadu_big.png, help-about-kadu.png - official Kadu icon
+help-about-kadu_big.png, help-about-kadu.png, kadu-kadu.png - official Kadu icon
 
 Icon module_tabs-close.png and module_tabs-remove.png from Mozilla Firefox is licensed under:
     * Mozilla Public License, version 1.1 or later (http://www.mozilla.org/MPL/MPL-1.1.html)
