--- a/varia/themes/icons/default/README
+++ b/varia/themes/icons/default/README
@@ -65,7 +65,7 @@ Jacek Nazim (zimaq) zimaq at zimaq dot pl
 	kadu-blocking.png
 	kadu-showdescriptionusers.png
 
-help-about-kadu_big.png, help-about-kadu.png, kadu-kadu.png - official Kadu icon
+help-about-kadu_big.png, help-about-kadu.png - official Kadu logo
 
 Icon module_tabs-close.png and module_tabs-remove.png from Mozilla Firefox is licensed under:
     * Mozilla Public License, version 1.1 or later (http://www.mozilla.org/MPL/MPL-1.1.html)
