added myself to AUTHORS
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4868 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/AUTHORS
+++ b/AUTHORS
@@ -17,6 +17,9 @@ programista
 Rafa³ Malinowski <vogel (at) kadu (dot) net>
 programista
 
+Piotr Galiszewski <piotrgaliszewski (at) gmail (dot) com>
+programista
+
  Ludzie, którzy nie wspieraj± ju¿ aktywnie projektu:
 ============================================================
 
