--- a/INSTALL
+++ b/INSTALL
@@ -1,7 +1,7 @@
 Instrukcja instalacji
 
 Aby zainstalowaæ Kadu ze ¼róde³ przeczytaj dokumentacjê, która siê
-znajduje na stronie http://www.kadu.net/index.php?page=docs
+znajduje na stronie http://www.kadu.net/w/Pomoc
 Nastêpnie spróbuj u¿yæ kreatora:
  ./Instaluj
 
