dodany Juzef do podziękowan
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4920 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/THANKS
+++ b/THANKS
@@ -16,5 +16,6 @@ Marek "Kubi¶" Kubicki
 £ukasz "sarven" Florczak
 Kamil "Arvenil" Dziedzic
 Piotr "patpi" Pe³zowski
+Wojciech "Juzef" Treter
 Manuel Wiblishauser and Jens Zettelmeyer - kadu_de
 i inni...
