--- a/AUTHORS
+++ b/AUTHORS
@@ -20,6 +20,9 @@ programista
 Piotr Galiszewski <piotrgaliszewski (at) gmail (dot) com>
 programista
 
+Tomasz Rostañski <rozteck (at) interia (dot) pl>
+programista
+
  Ludzie, którzy nie wspieraj± ju¿ aktywnie projektu:
 ============================================================
 
