--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawka kompilacji na FreeBSD 7.0 (neeo)
 * poprawne dzia³anie przy zmianie stanu akcji wysy³ania wiadomo¶ci przez Return (neeo)
 * poprawione zachowanie okien pokazuj±cych wiadomo¶ci przy zmianie ich rozmiaru (daris/neeo)
+* poprawka przy usuwaniu wiêkszej liczby kontaktów (neeo)
 * modu³ last_seen dodany do autodownloadu (neeo)
 
 +++ wersja 0.6.0
