akcja zmiany statusu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/branches/0.6.0.1@4980 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawne dzia³anie przy zmianie stanu akcji wysy³ania wiadomo¶ci przez Return (neeo)
 * poprawione zachowanie okien pokazuj±cych wiadomo¶ci przy zmianie ich rozmiaru (daris/neeo)
 * poprawka przy usuwaniu wiêkszej liczby kontaktów (neeo)
+* dodana akcja globalna umo¿liwiaj±ca zmianê statusu (neeo)
 * modu³ last_seen dodany do autodownloadu (neeo)
 
 +++ wersja 0.6.0
